--- a/Challenges/Challenges.csproj
+++ b/Challenges/Challenges.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReverseArray.cs" />
+    <Compile Include="IntegerToBinary.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
