Adds challenge to determine if two strings contain the same characters

--- a/Challenges/Challenges.csproj
+++ b/Challenges/Challenges.csproj
@@ -39,6 +39,7 @@
     <Compile Include="SumOddNumbers.cs" />
     <Compile Include="UniqueLetters.cs" />
     <Compile Include="Palindrome.cs" />
+    <Compile Include="SameCharacters.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
