--- a/Challenges/Challenges.csproj
+++ b/Challenges/Challenges.csproj
@@ -40,6 +40,7 @@
     <Compile Include="UniqueLetters.cs" />
     <Compile Include="Palindrome.cs" />
     <Compile Include="SameCharacters.cs" />
+    <Compile Include="CountCharacters.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
